# comprehensive-rust

./: README.md
day_1/: .gitignore  arrays  arrays.rs  borrow.rs  compound_types  compound_types.rs  copying_and_cloning.rs  dangling_references.rs  fizz_buzz  fizz_buzz.rs  for_loop.rs  implicit_conversions  implicit_conversions.rs  into_iterator.rs  iterators_and_ownership.rs  library.rs  lifetimes.rs  lifetimes_in_ds.rs  methods  methods.rs  move_in_func  move_in_func.rs  move_semantics  move_semantics.rs  opt_in_copy.rs  overloading  overloading.rs  ownership.rs  pretty_print  pretty_print.rs  references  scopes  shared_and_unique_borrow.rs  slices  slices.rs  small_example  small_example.rs  stack.rs  static_and_constant_vars  static_and_constant_vars.rs  (+8 more)
day_2/: blocks.rs  box.rs  box_with_recursive_ds.rs  break_and_continue.rs  destructuring_arrays.rs  destructuring_enums.rs  destructuring_structs.rs  enum_sizes.rs  enums.rs  field_shorthand.rs  for.rs  hashmap.rs  health_statistics.rs  if_exp.rs  if_let.rs  loop.rs  luhn_algorithm.rs  match.rs  match_guards.rs  method_receiver.rs  methods.rs  modules.rs  niche_opt.rs  option_and_result.rs  pattern_matching.rs  polygon_struct.rs  rc.rs  string.rs  strings_iterators.rs  structs.rs  tuple_structs.rs  variant_payloads.rs  vec.rs  visibility.rs  while.rs  while_let.rs
day_3/: closures.rs  convert_error_type.rs  default_methods.rs  deriving_error_enums.rs  deriving_traints.rs  doc_tests.rs  drop_trait.rs  error_handling_result.rs  from_into_trait.rs  (+21 more)
day_4/link_checker/: Cargo.toml
day_4/link_checker/src/: main.rs
(+10 files in other folders)
