[package]
name = "link_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "rustls-tls"] }
scraper = "0.14.0"
thiserror = "1.0.38"
threadpool = "1.8.1"
